--- a/templates/about.html
+++ b/templates/about.html
@@ -133,9 +133,9 @@
         
         <div class="address">
             <h2>Contact Us</h2>
-            <p><strong>Address:</strong>PO</p>
-            <p><strong>Phone:</strong>+254793587167</p>
-            <p><strong>Email:</strong> <a href="cadpoint@info.tutorials.com">youremail@example.com</a></p>
+            
+            <p><strong>Phone:</strong>+254101919385</p>
+            <p><strong>Email:</strong> <a href="ingotse@proton.me">Ingotse@proton.me</a></p>
         </div>
     </section>
 
