--- a/templates/contact.html
+++ b/templates/contact.html
@@ -63,8 +63,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="videos.html">Videos</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="assessment.html">Assessments</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Assessments
+                        </a>
+                        <ul class="dropdown-menu bg-primary" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="assessment1.html">Assessment 1</a></li>
+                            <li><a class="dropdown-item" href="assessment2.html">Assessment 2</a></li>
+                        </ul>
                     </li>
                     
                     <li class="nav-item">
@@ -77,6 +83,7 @@
                         <ul class="dropdown-menu bg-primary" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="../ortho.pptx" download>Download PowerPoint</a></li>
                             <li><a class="dropdown-item" href="powerpoint.html">open in google docs</a></li>
+                            <li><a class="dropdown-item" href="../3d.zip" download>Download 3D zip files</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -147,7 +154,7 @@
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-facebook fa-lg"></i></a>
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
                 <a href="https://wa.link/yyiyn6" class="text-white me-3"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
-                <a href="https://www.youtube.com/channel/UC1FA3vXiSHQmWzATrn5z2Nw" class="text-white me-3"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                <a href="https://youtube.com/@tech-o4x1c?si=nB0R0wlwaTyAHBj8" class="text-white me-3"><i class="fa-brands fa-youtube fa-lg"></i></a>
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-twitter fa-lg"></i></a>
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-linkedin fa-lg"></i></a>
             </div>
