--- a/templates/videos.html
+++ b/templates/videos.html
@@ -32,8 +32,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="videos.html">Videos</a>
                     </li>
-                    <li class="nav-item ">
-                        <a class="nav-link" href="assessment.html">Assessments</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Assessments
+                        </a>
+                        <ul class="dropdown-menu bg-primary" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="assessment1.html">Assessment 1</a></li>
+                            <li><a class="dropdown-item" href="assessment2.html">Assessment 2</a></li>
+                        </ul>
                     </li>
                     
                     <li class="nav-item">
@@ -46,6 +52,7 @@
                         <ul class="dropdown-menu bg-primary" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="../ortho.pptx" download>Download PowerPoint</a></li>
                             <li><a class="dropdown-item" href="powerpoint.html">open in google docs</a></li>
+                            <li><a class="dropdown-item" href="../3d.zip" download>Download 3D zip files</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -96,10 +103,6 @@
     </div>
 
     <div class="mt-20 container mx-auto px-4 py-6 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-6">
-            </div>
-                <div class="bg-white p-4 rounded-lg shadow-md transition-all duration-300 video-card" data-video-id="9">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/7tZdiC6w-HI" frameborder="0" allowfullscreen></iframe>
-            </div>
             <div class="bg-white p-4 rounded-lg shadow-md transition-all duration-300 video-card" data-video-id="10">
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/GtTTDwrPGiE" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -217,7 +220,7 @@
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-facebook fa-lg"></i></a>
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-instagram fa-lg"></i></a>
                 <a href="https://wa.link/yyiyn6" class="text-white me-3"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
-                <a href="https://www.youtube.com/channel/UC1FA3vXiSHQmWzATrn5z2Nw" class="text-white me-3"><i class="fa-brands fa-youtube fa-lg"></i></a>
+                <a href="https://youtube.com/@tech-o4x1c?si=nB0R0wlwaTyAHBj8" class="text-white me-3"><i class="fa-brands fa-youtube fa-lg"></i></a>
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-twitter fa-lg"></i></a>
                 <a href="#" class="text-white me-3"><i class="fa-brands fa-linkedin fa-lg"></i></a>
             </div>
